welcome.lessons.welcome.methods.picture.PictureMono2.scala.error
PictureMono2:35: error: ';' expected but ')' found.
    avance7())
             ^